# swfdec__swfdec-mozilla

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
icons/: Makefile.am
icons/16x16/: Makefile.am
icons/22x22/: Makefile.am
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
mozilla-sucks/: Makefile.am  npapi.h
src/: .gitignore  Makefile.am  plugin.c  plugin.h  plugin.symbols  plugin_x11.c  plugin_x11.h  swfmoz_config.c  swfmoz_config.h  swfmoz_dialog.c  swfmoz_dialog.h  swfmoz_loader.c  swfmoz_loader.h  swfmoz_player.c  swfmoz_player.h
